# TDRacer

./: CMakeLists.txt  readme.md
TDRacer/: game.h  platformer_main.cpp
TDRacer/components/: cmp_actor_movement.cpp  cmp_ai_physics.cpp  cmp_ai_physics.h  cmp_car_body.cpp  cmp_car_body.h  cmp_enemy_ai.cpp  cmp_enemy_turret.cpp  cmp_enemy_turret.h  cmp_lap_timer.cpp  cmp_lap_timer.h  cmp_pause_menu.cpp  cmp_pause_menu.h  cmp_physics.cpp  cmp_physics.h  cmp_player2_physics.cpp  cmp_player2_physics.h  cmp_player_controls.cpp  cmp_player_controls.h  cmp_player_physics.cpp  cmp_player_physics.h  cmp_player_profile.cpp  cmp_player_profile.h  cmp_race_countdown.cpp  cmp_race_countdown.h  cmp_race_timer.cpp  cmp_race_timer.h  cmp_sound.cpp  cmp_sound.h  cmp_sprite.cpp  cmp_sprite.h  cmp_text.cpp  cmp_text.h  cmp_timer.cpp  cmp_timer.h  cmp_wheel.cpp  cmp_wheel.h
TDRacer/scenes/: scene_car_select.cpp  scene_car_select.h  scene_controls.cpp  scene_controls.h  scene_graphics.cpp  scene_graphics.h  scene_leaderboard.cpp  scene_leaderboard.h  scene_level1.cpp  scene_level1.h  scene_level2.cpp  scene_level2.h  scene_level3.cpp  scene_level3.h  scene_load_profile.cpp  scene_load_profile.h  scene_load_screen.cpp  scene_load_screen.h  scene_menu _options.cpp  scene_menu _options.h  scene_menu.cpp  scene_menu.h  scene_race_menu.cpp  scene_race_menu.h  scene_select_avatar.cpp  scene_select_avatar.h  scene_sounds.cpp  scene_sounds.h  scene_splash_screen.cpp  scene_splash_screen.h  scene_track_select.cpp  scene_track_select.h
engine/lib_ecm/: ecm.cpp  ecm.h
engine/lib_tile_level_loader/: LevelSystem.cpp  LevelSystem.h
engine/src/: engine.cpp  engine.h  system_physics.cpp  system_physics.h  system_resources.cpp  system_resources.h
res/: maze.txt  maze_2.txt  menu.txt  opening.txt  track_1.txt  track_2.txt  track_3.txt
res/img/Straights/: TDRacer.lnk
